--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -1,3 +1,137 @@
 // Place all the styles related to the categories controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+$font-stack: Helvetica, sans-serif;
+$primary-color: rgb(75, 0, 0);
+$secondary-color: #EEE;
+
+body {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font: 100% $font-stack;
+  color: $primary-color;
+}
+
+#overlayContainer {
+  margin-bottom: 15px;
+  z-index: 1;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  .alert {
+    padding: 20px;
+    color: white;
+    margin-top: 10px;
+    width: 50%;
+  }
+}
+
+.container {
+  width: 900px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+.button, .submit {
+  text-align: center;
+  width: 150px;
+  padding: 10px 24px;
+  font-size: 20px;
+  background-color: $secondary-color;
+  border: none;
+  border-radius: 5px;
+  &:hover {
+    text-decoration: none;
+    background-color: $primary-color;
+    color: $secondary-color;
+  }
+}
+
+.button.small, .submit {
+  width: 120px;
+  padding: 8px 16px;
+  font-size: 16px;
+}
+
+header {
+  background-color: $primary-color;
+  color: $secondary-color;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+
+  ul {
+    padding: 0;
+    display: flex;
+    list-style: none;
+    li {
+      margin-right: 20px;
+      &.active {
+        font-weight: 700;
+      }
+    }
+  }
+}
+
+main {
+  padding: 30px 0;
+  p {
+    text-align: justify;
+  }
+
+  .category-item {
+    border-bottom: 1px solid $primary-color;
+    padding: 8px;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+
+    p {
+      display: flex;
+    }
+    label {
+      width: 100px;
+    }
+    input.name {
+      width: 60%;
+      font-size: 20px;
+      border: none;
+      border-bottom: 1px solid $primary-color;
+      &:focus {
+        outline: none;
+      }
+    }
+    .submit {
+      margin-left: 100px;
+    }
+    textarea {
+      width: 60%;
+      height: 200px;
+      font-family: $font-stack;
+    }
+  }
+  
+  .others {
+    display: flex;
+    flex-direction: column;
+    margin-left: 100px;
+  }
+}
