--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,18 +1,19 @@
+<p>
+  <% if @category.errors.any?  %>
+    <ul>
+      <% @category.errors.full_messages.each do |message| %>
+        <li>
+          <%= message %>
+        </li>
+      <% end %>
+    </ul>
+  <% end %>     
+</p>
+
 <%= form_with scope: :category, url: update_category_path, local: true, method: :patch do |f|  %>
   <p>
-    <% if @category.errors.any?  %>
-      <ul>
-        <% @category.errors.full_messages.each do |message| %>
-          <li>
-            <%= message %>
-          </li>
-        <% end %>
-      </ul>
-    <% end %>     
-  </p>
-  <p>
     <%= f.label :name %>
-    <%= f.text_field :name, :class => 'name' %>
+    <%= f.text_field "name", :class => 'name' %>
   </p>
   <p>
     <%= f.label :description %>
@@ -24,6 +25,6 @@
 <% end %>
 
 <div class="others">
-  <%= link_to 'Delete', delete_category_path(@category.id), method: :delete %>
+  <%= link_to 'Delete', delete_category_path(@category.id), method: :delete, data: {confirm: "Are you sure?"} %>
   <%=  link_to 'Back to Categories', categories_path %>
 </div>
