--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -95,7 +95,13 @@ main {
     text-align: justify;
   }
 
-  .category-item {
+  .task-item.completed {
+    h3 {
+      text-decoration: line-through;
+    }
+  }
+
+  .category-item, .task-item {
     border-bottom: 1px solid $primary-color;
     padding: 8px;
   }
