--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -6,5 +6,12 @@
   <%= @category.description %>
 </p>
 
+<h3>Tasks</h3>
+<ul>
+<% @tasks.each do |task| %>
+  <li><%= link_to task.name, show_task_path(task.id) %></li>
+<% end %>
+</ul>
+
 <%= link_to 'Edit', edit_category_path(@category.id) %>
 <%= link_to 'Back to Categories', categories_path %>
