--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,27 @@
       <div class="container">
         <h1>Avion Rails Journal</h1>
         <ul class="nav navbar-nav">
-          <li>Home</li>
-          <li class="active"><%= link_to 'Categories', categories_path %></li>
+          <% if current_page?("/") %>
+          <li class="active">
+          <% else %>
+          <li>
+          <% end %>
+            <%= link_to 'Home', root_path %>
+          </li>
+          <% if current_page?("/categories") %>
+          <li class="active">
+          <% else %>
+          <li>
+          <% end %>
+            <%= link_to 'Categories', categories_path %>
+          </li>
+          <% if current_page?("/tasks") %>
+          <li class="active">
+          <% else %>
+          <li>
+          <% end %>
+            <%= link_to 'Tasks', tasks_path %>
+          </li>
         </ul>
       </div>
     </header>
