--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,7 +2,7 @@
 
 <% @categories.each do |category| %>
   <div class="category-item">
-    <h3><%= link_to category.name, show_category_path(category.id) %></h3>
+    <h3><%= link_to category.name, category_path(category.id) %></h3>
     <p><%= category.description %></p>
     <%= link_to 'Edit', edit_category_path(category.id) %>
   </div>
