--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,7 +1,7 @@
 
 <h2>
   <% category = Category.find(@task.category.id) %>
-  <%= @task.name %> (<%= link_to category.name, show_category_path(category.id) %>)
+  <%= @task.name %> (<%= link_to category.name, category_path(category.id) %>)
 </h2>
 <p>
   <%= @task.details %>
@@ -17,5 +17,5 @@
 </p>
 <% end %>
 
-<%= link_to "Edit", edit_task_path(@task.id) %>
-<%= link_to "Back to Tasks", tasks_path %>
+<%= link_to "Edit", edit_category_task_path(@category.id, @task.id) %>
+<%= link_to "Back to #{@category.name} Tasks", category_tasks_path(@category.id) %>
