--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,5 @@
 <%= link_to "New Category", new_category_path, class: 'button' %>
+<h2>All Categories</h2>
 
 <% @categories.each do |category| %>
   <div class="category-item">
