--- a/app/views/tasks/today.html.erb
+++ b/app/views/tasks/today.html.erb
@@ -10,7 +10,7 @@
     <p><%= task.details %></p>
     <ul>
       <% if task.deadline %>
-        <li>Deadline: <%= task.deadline %></li>
+        <li>Deadline: <%= task.deadline.strftime '%Y-%m-%d %H:%M:%S' %></li>
       <% end %>
     </ul>
   </div>
@@ -23,7 +23,7 @@
     <p><%= task.details %></p>
     <ul>
       <% if task.deadline %>
-        <li>Deadline: <%= task.deadline %></li>
+        <li>Deadline: <%= task.deadline.strftime '%Y-%m-%d %H:%M:%S' %></li>
       <% end %>
     </ul>
     <%= link_to "Edit", edit_category_task_path(category.id, task.id) %>
