--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -8,7 +8,7 @@
 </p>
 <% if @task.deadline %>
 <p>
-  Deadline: <%= @task.deadline %>
+  Deadline: <%= @task.deadline.strftime '%Y-%m-%d %H:%M:%S' %>
 </p>
 <% end %>
 <% if @task.completed %>
