--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,27 +14,47 @@
       <div class="container">
         <h1>Avion Rails Journal</h1>
         <ul class="nav navbar-nav">
-          <% if current_page?("/") %>
-          <li class="active">
+          <% if user_signed_in? %>
+            <% if current_page?("/") %>
+            <li class="active">
+            <% else %>
+            <li>
+            <% end %>
+              <%= link_to 'Home', root_path %>
+            </li>
+            <% if current_page?("/categories") %>
+            <li class="active">
+            <% else %>
+            <li>
+            <% end %>
+              <%= link_to 'Categories', categories_path %>
+            </li>
+            <% if current_page?("/tasks") %>
+            <li class="active">
+            <% else %>
+            <li>
+            <% end %>
+              <%= link_to 'All Tasks', tasks_path %>
+            </li>
+            <li>
+              <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
+            </li>
           <% else %>
-          <li>
+            <% if current_page?("/users/sign_in") %>
+            <li class="active">
+            <% else %>
+            <li>
+            <% end %>
+              <%= link_to 'Sign In', new_user_session_path %>
+            </li>
+            <% if current_page?("/users/sign_up") %>
+            <li class="active">
+            <% else %>
+            <li>
+            <% end %>
+              <%= link_to 'Register', new_user_registration_path %>
+            </li>
           <% end %>
-            <%= link_to 'Home', root_path %>
-          </li>
-          <% if current_page?("/categories") %>
-          <li class="active">
-          <% else %>
-          <li>
-          <% end %>
-            <%= link_to 'Categories', categories_path %>
-          </li>
-          <% if current_page?("/tasks") %>
-          <li class="active">
-          <% else %>
-          <li>
-          <% end %>
-            <%= link_to 'All Tasks', tasks_path %>
-          </li>
         </ul>
       </div>
     </header>
