add currently logged in

--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -4,7 +4,7 @@
 
 $font-stack: Helvetica, sans-serif;
 $primary-color: rgb(75, 0, 0);
-$secondary-color: #EEE;
+$secondary-color: #eee;
 
 body {
   box-sizing: border-box;
@@ -23,7 +23,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  
+
   .alert {
     padding: 20px;
     color: white;
@@ -47,7 +47,8 @@ a {
   }
 }
 
-.button, .submit {
+.button,
+.submit {
   text-align: center;
   width: 200px;
   padding: 10px 24px;
@@ -62,7 +63,8 @@ a {
   }
 }
 
-.button.small, .submit {
+.button.small,
+.submit {
   width: 120px;
   padding: 8px 16px;
   font-size: 16px;
@@ -75,6 +77,14 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+
+  .header-flex {
+    display: flex;
+    justify-content: space-between;
+    p {
+      text-align: right;
+    }
+  }
 
   ul {
     padding: 0;
@@ -101,7 +111,8 @@ main {
     }
   }
 
-  .category-item, .task-item {
+  .category-item,
+  .task-item {
     border-bottom: 1px solid $primary-color;
     padding: 8px;
   }
@@ -134,7 +145,7 @@ main {
       font-family: $font-stack;
     }
   }
-  
+
   .others {
     display: flex;
     flex-direction: column;
